<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_widget"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_widget_shape"
    android:baselineAligned="false"
    android:gravity="center"
    android:orientation="horizontal"
    android:padding="0dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:layout_weight="0.6">

        <TextView
            android:id="@+id/appwidget_text_weather"
            style="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="2dp"
            android:contentDescription="@string/app_name"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/white_smoke" />

        <TextView
            android:id="@+id/appwidget_text_city"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/appwidget_text_weather"
            android:layout_centerHorizontal="true"
            android:layout_margin="2dp"
            android:contentDescription="@string/city"
            android:text="@string/loading"
            android:textAlignment="center"
            android:textColor="@color/white_smoke"
            android:visibility="gone" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/widget_layout_line"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/white_smoke"
        android:orientation="horizontal"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/widget_layout_weather_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:layout_weight="0.4"
        android:visibility="gone">

        <TextView
            android:id="@+id/appwidget_text_speed"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="2dp"
            android:contentDescription="@string/wind"
            android:text="@string/wind"
            android:textAlignment="center"
            android:textColor="@color/white_smoke"
            android:visibility="gone" />

        <TextView
            android:id="@+id/appwidget_text_humidity"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/appwidget_text_speed"
            android:layout_centerHorizontal="true"
            android:layout_margin="2dp"
            android:contentDescription="@string/humidity"
            android:text="@string/humidity"
            android:textAlignment="center"
            android:textColor="@color/white_smoke"
            android:visibility="gone" />
    </RelativeLayout>
</LinearLayout>